syntax = "proto3";

option csharp_namespace = "Infrastructure.SharedKernel.Protos.Identity";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package identity;

service UserGrpcServerService {
  rpc PingGrpc(google.protobuf.Empty) returns (PingGrpcResponse);
  rpc GetGeneralUserGrpc(GetGeneralUserGrpcRequest) returns (GetGeneralUserGrpcResponse);
  rpc UserStatisticsGrpc(UserStatisticsGrpcRequest) returns (UserStatisticsGrpcResponse);
}

message PingGrpcResponse {
  string message = 1;
}

message GetGeneralUserGrpcRequest {
  string id = 1;
}

message GetGeneralUserGrpcResponse {
  optional GeneralUserGrpc data = 1;
}

message GeneralUserGrpc {
  string id = 1;
  string userName = 2;
  google.protobuf.StringValue avatar = 3;
  bool isOfficial = 4;
}

message UserStatisticsGrpcRequest {
  repeated string metrics = 1;
}

message UserStatisticsGrpcResponse {
  repeated MetricPair data = 1;
}

message MetricPair {
  string metric = 1;
  string value = 2;
}